--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <base href="/"/>
   <meta charset="utf-8"/>
-  <title>Radix</title>
+  <title>Cardinal Stone</title>
   <meta name="description" content="">
   <meta name="author" content="">
   <meta name="keywords" content="">
